# medcard

./: .env.py  .env_example  .flake8  .gitignore  Dockerfile  Makefile  TODO  alembic.ini  database.py  docker-compose.yaml  main.py  pyproject.toml
app/: database.py  main.py
app/admin/: __init__.py  clincs.py  models.py  users.py
app/config/: config.py
app/models/: __init__.py  base_model.py  clinics.py  users.py
app/routers/: __init__.py  auth.py  clinics.py
app/schemas/: __init__.py  auth.py  clinics.py
app/services/: otp_services.py
app/utils/: OSM.py  admin_auth.py  create_superuser.py  security.py  superuser.py  utils.py
migrations/: env.py
migrations/versions/: 248900437dbb_initial_commit.py  c4efb0017f77_initial_commit.py
templates/: login.html  osm_map.html  osm_map_display.html
