[project]
name = "medcard"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "celery[redis]>=5.5.3",
    "fastapi>=0.116.1",
    "flake8>=7.3.0",
    "greenlet>=3.2.4",
    "itsdangerous>=2.2.0",
    "orjson>=3.11.3",
    "passlib>=1.7.4",
    "pydantic-settings>=2.10.1",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.43",
    "starlette-admin[sqlalchemy]>=0.15.1",
    "uvicorn>=0.35.0",
]
